# make_choice

./: .env  .gitignore  Cargo.toml  scheme.sql
config/: dev.json
configs/: dev.toml
model/: entities.puml
src/: config.rs  lib.rs  main.rs  setting.rs
src/database/: mod.rs  task.rs
src/db/: app.sqlite  app.sqlite-shm  app.sqlite-wal
src/graph/: mod.rs  requirement.rs
src/requirement/: mod.rs
tests/: test.rs  usercase.rs
