[package]
name = "make_choice"
version = "0.1.0"
authors = ["iwazaki <iwazaki@uta-senzen.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.3", features = ["attributes"] }
tide = "0.12.0"
serde_json = "1.0.57"
serde = "1.0.115"
sqlx = { version = "0.4.0-beta.1", features = ["postgres"] }
lazy_static = "1.4.0"
config = "0.10.1"
